# internal/delivery/http/handler/tenant_handler.go
@@ -97,7 +97,7 @@ func (h tenantHandler) List(c fiber.Ctx) error {
 //	@Success		200	{object}	response.BaseSwaggerResponse{data=response.DetailTenantResponse}	"Tenant detail fetched successfully. Available code (DETAIL_FETCHED)"
 //	@Failure		400	{object}	response.BaseSwaggerEmptyResponse{}									"Bad Request - invalid ID. Available code (INVALID_PARAM_ID)"
 //	@Failure		401	{object}	response.BaseSwaggerEmptyResponse{}									"Unauthorized. Available code (UNAUTHORIZED)"
-//	@Failure		422	{object}	response.BaseSwaggerEmptyResponse{}									"Tenant not found. Available code (TENANT_NOT_FOUND)"
+//	@Failure		404	{object}	response.BaseSwaggerEmptyResponse{}									"Tenant not found. Available code (NOT_FOUND)"
 //	@Failure		500	{object}	response.BaseSwaggerEmptyResponse{}									"Internal Server Error. Available code (INTERNAL_SERVER_ERROR)"
 //	@Router			/tenant/{id} [get]
 func (h tenantHandler) Detail(c fiber.Ctx) error {
