# swagger/swagger.json
@@ -563,6 +563,12 @@
                             "$ref": "#/definitions/response.BaseSwaggerEmptyResponse"
                         }
                     },
+                    "404": {
+                        "description": "Role not found. Available code (NOT_FOUND)",
+                        "schema": {
+                            "$ref": "#/definitions/response.BaseSwaggerEmptyResponse"
+                        }
+                    },
                     "422": {
                         "description": "Role not found. Available code (ROLE_NOT_FOUND)",
                         "schema": {
@@ -990,8 +996,8 @@
                             "$ref": "#/definitions/response.BaseSwaggerEmptyResponse"
                         }
                     },
-                    "422": {
-                        "description": "Tenant not found. Available code (TENANT_NOT_FOUND)",
+                    "404": {
+                        "description": "Tenant not found. Available code (NOT_FOUND)",
                         "schema": {
                             "$ref": "#/definitions/response.BaseSwaggerEmptyResponse"
                         }
